Update docs user
